mkdocs/site/images/BdsqlALBSecurityGroup.json
  BdsqlALBSecurityGroupSSL:
    Type: 'AWS::EC2::SecurityGroup'
    Condition: EnableSSLAndAuth
    Properties:
      GroupName: !Sub '${MDLInstanceName}-${Environment}-BdsqlALBSecurityGroup'
      GroupDescription: Allow https to client host
      VpcId: !Ref VpcIdParameterKey
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: '5439'
          ToPort: '5439'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '443'
          ToPort: '443'
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: '80'
          ToPort: '80'
          CidrIp: 0.0.0.0/0
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          IpProtocol: '-1'
